<?xml version="1.0" encoding="UTF-8"?>

<resources>
    <string name="alarm_saved">Alarm scheduled at %1$2d:%2$02d</string>
    <string name="alarm_deleted">Deleted the alarm at %1$2d:%2$02d</string>
    <string name="alarm_went_off">Alarm went off at %1$2d:%2$02d</string>
    <string name="time_24hour_format">%1$2d:%2$02d</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="registered_alarms">Registered alarms</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Game_switch">Reaction Game</string>
    <string name="multiple_choice">Multiple-Choice</string>
    <string name="Fill_blank">Fill in the Blanks</string>

    <string name="instructions">Tap the screen only when you see the real MVP!</string>

    <string name="time_remaining">Time Remaining:</string>

    <string name="card_intro_message"><![CDATA[
    In this screen you\'ll be able to create cards that will help you
    memorize whatever you want. Just tap the + button and write a phrase or definition
    that you want to memorize. Make sure to create at least three so that you can select this game
    when you set an alarm. Next time the alarm goes off, you will be asked to
    fill in some blanks in order for the alarm to go off! Good Luck!
        ]]></string>

    <string name="mc_card_intro_message"><![CDATA[
    This is where you\'ll be able to create flashcards that you can use to create multiple choice
    questions. Just tap the + button and write a term and definition that you want to memorize.
    You will be given a definition from your library of cards and four terms as answer choices,
    but only one of these terms is the correct answer!
    Make sure to create at least four so that you can select this game
    when you set an alarm. Good Luck!
        ]]></string>

    <string name="card_deleted">Card %1$s deleted </string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_react_game">ReactGameActivity</string>
    <string name="enter_your_alarm_name_here">Enter your alarm name here!</string>
    <string name="cancel2">Cancel</string>
    <string name="ok2">OK</string>
</resources>