<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:nestedScrollingEnabled="true"
        android:baselineAligned="false">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameOfAlarm"
            android:hint="@string/enter_your_alarm_name_here"
            android:gravity="center"
            android:textSize="20sp"
            android:linksClickable="false"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:textStyle="italic" />

        <TimePicker
            android:id="@+id/time_picker_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/margin_small" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Game_switch"
            android:id="@+id/react_switch"
            android:checked="false"
            android:textSize="15sp"
            android:paddingRight="@dimen/margin_small"
            android:paddingLeft="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple_choice"
            android:id="@+id/multiple_choice_switch"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:textSize="15sp"
            android:paddingBottom="@dimen/margin_small" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fill_blank"
            android:id="@+id/Fill_Blank_Switch"
            android:paddingLeft="@dimen/margin_small"
            android:paddingRight="@dimen/margin_small"
            android:textSize="15sp"
            android:paddingBottom="@dimen/margin_small" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >

            <Space
                android:id="@+id/spacer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="invisible" />

            <Button
                android:id="@+id/button_cancel_time_picker"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel2"
                android:textSize="15sp"
                android:paddingRight="@dimen/margin_small"
                android:paddingLeft="@dimen/margin_small" />

            <Button
                android:id="@+id/button_ok_time_picker"
                style="?android:attr/buttonBarPositiveButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok2"
                android:textSize="15sp"
                android:paddingEnd="@dimen/margin_small"
                android:paddingStart="@dimen/margin_small"
                android:paddingRight="@dimen/margin_small"
                android:paddingLeft="@dimen/margin_small" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>