<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucsb.cowbell.alarm.MenuFragment"
    tools:showIn="@layout/fragment_menu">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Game_switch"
            android:id="@+id/switch1"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multiple_choice"
            android:id="@+id/switch3"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />

        <Switch
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Fill_blank"
            android:id="@+id/switch2"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentRight="false"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left|bottom"></LinearLayout>

    </LinearLayout>

</RelativeLayout>
